--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h2>JS04 - Loops</h2>
-    <script src="for.js"></script>
+    <!-- <script src="for.js"></script> -->
+        <script src="while.js"></script>
   </body>
 </html>
