--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h2>JS04 - Loops</h2>
     <!-- <script src="for.js"></script> -->
-        <script src="while.js"></script>
+    <!-- <script src="while.js"></script> -->
+    <script src="do-while.js"></script>
   </body>
 </html>
